--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     header {
       height: 100vh;
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)),
-        url('C:/Users/Edify/OneDrive/Documents/spartanz2k25/Hindusthan.jpg') center/cover no-repeat;
+        url('Hindusthan.jpg') center/cover no-repeat;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -129,10 +129,10 @@
       background-position: center;
     }
     #poster::before {
-      background-image: url('C:/Users/Edify/OneDrive/Documents/spartanz2k25/Banner.jpeg');
+      background-image: url('Banner.jpeg');
     }
     #events::before {
-      background-image: url('C:/Users/Edify/OneDrive/Documents/spartanz2k25/Banner.jpeg');
+      background-image: url('Banner.jpeg');
     }
     .section-title {
       text-align: center;
@@ -364,9 +364,9 @@
 
   <header>
     <div class="logo-container">
-      <img src="C:\Users\Edify\OneDrive\Documents\spartanz2k25\finallogos.png" alt="Spartanz Main Logo" class="header-logo" data-aos="fade-down">
-      <img src="C:\Users\Edify\OneDrive\Documents\spartanz2k25\editedcertify.png" alt="Certification Logo" class="header-logo" data-aos="fade-down">
-      <img src="C:\Users\Edify\OneDrive\Documents\spartanz2k25\Certificationlogo2.png" alt="HIT Logo" class="header-logo" data-aos="fade-down">
+      <img src="finallogos.png" alt="Spartanz Main Logo" class="header-logo" data-aos="fade-down">
+      <img src="editedcertify.png" alt="Certification Logo" class="header-logo" data-aos="fade-down">
+      <img src="Certificationlogo2.png" alt="HIT Logo" class="header-logo" data-aos="fade-down">
     </div>
     <h1 data-aos="fade-down">Spartanz 2K25</h1>
     <h3 data-aos="fade-up" data-aos-delay="200">Department of CSE & AI-DS — Hindusthan Institute of Technology</h3>
@@ -388,7 +388,7 @@
 
   <section id="poster">
     <h2 class="section-title" data-aos="fade-up">📌 Event Poster</h2>
-    <img src="C:\Users\Edify\OneDrive\Documents\spartanz2k25\IMG-20250409-WA0012.jpg" alt="Spartanz 2K25 Event Poster" class="poster-image" data-aos="zoom-in">
+    <img src="IMG-20250409-WA0012.jpg" alt="Spartanz 2K25 Event Poster" class="poster-image" data-aos="zoom-in">
   </section>
 
   <section id="events">
