--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     .logo-container {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
+      width: 80%;
       gap: 1rem;
       margin-bottom: 1rem;
     }
@@ -346,7 +347,7 @@
     }
     @media (max-width: 480px) {
       .header-logo {
-        width: 150px;
+        width: 100px;
       }
       header h1 {
         font-size: 2rem;
@@ -365,7 +366,6 @@
   <header>
     <div class="logo-container">
       <img src="finallogos.png" alt="Spartanz Main Logo" class="header-logo" data-aos="fade-down">
-      <img src="editedcertify.png" alt="Certification Logo" class="header-logo" data-aos="fade-down">
       <img src="Certificationlogo2.png" alt="HIT Logo" class="header-logo" data-aos="fade-down">
     </div>
     <h1 data-aos="fade-down">Spartanz 2K25</h1>
